--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
   - defaults
 
 dependencies:
-  - python=3.10
+  - python=3.11
   - pip
   - setuptools_scm
   - toml
@@ -15,7 +15,7 @@ dependencies:
   - conda-lock
 
   # Package dependencies
-  - estimagic
+  - optimagic
   - jax
   - linearmodels
   - numpy
